[package]
name = "barracuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="client"
path="src/bin/client.rs"

[[bin]]
name="server"
path="src/bin/server.rs"

[dependencies]
rand = "0.8.5"
rsa = "0.9.2"
sqlite = "0.31.0"
